Tue Feb 27 16:54:31 GMT 2007  Richard Boulton <richard@lemurconsulting.com>

	* backends/quartz/btree.cc,backends/quartz/btree.h,
	  backends/quartz/quartz_database.cc: Apply fix for opening
	  databases while under heavy modification to quartz, using Olly's
	  attachment to bug #108:
	  http://www.xapian.org/cgi-bin/bugzilla/attachment.cgi?id=43
	  Verified with loadtest that this resolves the issue.

Tue Feb 27 13:12:31 GMT 2007  Olly Betts <olly@survex.com>

	* tests/harness/backendmanager.h: Add get_dbtype() method to allow the
	  current backend type to be read.
	* tests/apitest.cc,tests/apitest.h: Add get_dbtype() function to allow
	  BackendManager::get_dbtype() to be called by tests.
	* tests/api_wrdb.cc: Add new test crashrecovery1 to verify that the
	  backend can recover from the latest revision missing some of the
	  base files.

Tue Feb 27 12:45:00 GMT 2007  Olly Betts <olly@survex.com>

	* tests/harness/backendmanager.cc: Fix how we start xapian-progsrv
	  when running under valgrind.

Tue Feb 27 11:34:22 GMT 2007  Olly Betts <olly@survex.com>

	* backends/flint/flint_database.cc: Remove the old throw for
	  DatabaseOpeningError so the new throw for DatabaseModifiedError will
	  actually be used.

Tue Feb 27 09:22:52 GMT 2007  Richard Boulton <richard@lemurconsulting.com>

	* flint_table.cc,flint_table.h,flint_database.cc: If a database is
	  being frequently modified (ie, transactions committed extremely
	  frequently), flint can fail open all the tables at a consistent
	  revision on the first attempt.  The code to handle this in
	  flint_database.cc was not firing because flint_table.cc was
	  reporting all failures to open a table for reading by throwing an
	  exception.  This commit changes flint_table.cc to report failure
	  to open at a specific revision by returning false.

	  In addition, there was a bug in flint_database.cc which caused
	  the attempts to re-try opening a database in this situation to
	  fail.  This is now fixed.
